--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,81 +3,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84e6dbe8",
+   "id": "1db1261d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def standardize_ids(df):\n",
+    "def standardize_columns(df):\n",
     "    \"\"\"\n",
-    "    Standardize 'Position ID' and 'Employee ID' columns.\n",
-    "    Removes extra decimal points, leading/trailing spaces, \n",
-    "    and converts IDs to string format with uniform length.\n",
+    "    Standardize column names and formats in the dataframe.\n",
+    "    Rename 'Position Number' to 'Position ID' and ensure consistent formatting for IDs.\n",
     "    \"\"\"\n",
+    "    # Rename columns for consistency\n",
+    "    df = df.rename(columns={\"Position Number\": \"Position ID\"})\n",
+    "\n",
+    "    # Standardize Position ID and Employee ID formats\n",
     "    if \"Position ID\" in df.columns:\n",
-    "        df[\"Position ID\"] = df[\"Position ID\"].astype(str).str.split('.').str[0].str.strip()\n",
+    "        df[\"Position ID\"] = df[\"Position ID\"].astype(str).str.split('.').str[0]\n",
     "    if \"Employee ID\" in df.columns:\n",
-    "        df[\"Employee ID\"] = df[\"Employee ID\"].astype(str).str.split('.').str[0].str.strip()\n",
+    "        df[\"Employee ID\"] = df[\"Employee ID\"].astype(str).str.split('.').str[0]\n",
+    "\n",
     "    return df\n",
     "\n",
-    "def find_new_records(file_df, master_df, month, source):\n",
+    "def find_new_records(current_df, master_df, month, source_type):\n",
     "    \"\"\"\n",
-    "    Find new records in the current month's file compared to the master dataframe.\n",
+    "    Find new records in the current month's file that are not present in the master_df.\n",
     "    \"\"\"\n",
-    "    # Standardize IDs for comparison\n",
-    "    file_df = standardize_ids(file_df)\n",
-    "    master_df = standardize_ids(master_df)\n",
+    "    # Standardize columns\n",
+    "    current_df = standardize_columns(current_df)\n",
+    "    master_df = standardize_columns(master_df)\n",
     "\n",
-    "    # Add missing columns to file_df to match master_df\n",
+    "    # Ensure columns match the master_df\n",
     "    for col in master_df.columns:\n",
-    "        if col not in file_df.columns:\n",
-    "            file_df[col] = \"\"\n",
+    "        if col not in current_df.columns:\n",
+    "            current_df[col] = \"\"\n",
     "\n",
-    "    # Drop columns not in master_df\n",
-    "    file_df = file_df[master_df.columns]\n",
-    "\n",
-    "    # Identify new records (not in master_df)\n",
-    "    new_records = file_df[~file_df[\"Position ID\"].isin(master_df[\"Position ID\"])]\n",
+    "    # Identify new records\n",
+    "    merged = pd.merge(current_df, master_df, on=[\"Position ID\", \"Employee ID\"], how=\"left\", indicator=True)\n",
+    "    new_records = merged[merged[\"_merge\"] == \"left_only\"].drop(columns=[\"_merge\"])\n",
     "    new_records[\"Month Added\"] = month\n",
-    "    new_records[\"Source\"] = source\n",
+    "    new_records[\"Source\"] = source_type\n",
     "\n",
-    "    # Ensure new_records matches the structure of new_df\n",
-    "    new_records = new_records.reindex(columns=master_df.columns.tolist() + [\"Month Added\", \"Source\"], fill_value=\"\")\n",
+    "    return new_records[master_df.columns.tolist() + [\"Month Added\", \"Source\"]]\n",
     "\n",
-    "    return new_records\n",
-    "\n",
-    "def find_changed_records(current_df, next_df, cols_to_check, month, source):\n",
+    "def find_changed_records(current_df, next_df, cols_to_check, month, source_type):\n",
     "    \"\"\"\n",
-    "    Find records with changes in the next month's file compared to the current month's file.\n",
+    "    Find records in the current month's file where specified columns have changed in the next month's file.\n",
     "    \"\"\"\n",
-    "    # Standardize IDs for comparison\n",
-    "    current_df = standardize_ids(current_df)\n",
-    "    next_df = standardize_ids(next_df)\n",
+    "    # Standardize columns\n",
+    "    current_df = standardize_columns(current_df)\n",
+    "    next_df = standardize_columns(next_df)\n",
     "\n",
-    "    # Merge both dataframes on 'Position ID' and 'Employee ID' for comparison\n",
+    "    # Merge current and next month's data for comparison\n",
     "    merged = pd.merge(current_df, next_df, on=[\"Position ID\", \"Employee ID\"], suffixes=(\"_current\", \"_next\"), how=\"inner\")\n",
     "\n",
+    "    # Identify changes in the specified columns\n",
     "    changed_records = []\n",
     "    for _, row in merged.iterrows():\n",
-    "        changed_cols = [\n",
-    "            col for col in cols_to_check\n",
-    "            if row[f\"{col}_current\"] != row[f\"{col}_next\"]\n",
-    "        ]\n",
-    "        if changed_cols:\n",
-    "            updated_row = row.to_dict()\n",
+    "        cols_changed = [col for col in cols_to_check if row[f\"{col}_current\"] != row[f\"{col}_next\"]]\n",
+    "        if cols_changed:\n",
+    "            updated_row = row[[col for col in current_df.columns if col.endswith(\"_next\")]].rename(lambda x: x.replace(\"_next\", \"\"))\n",
     "            updated_row[\"Month Changed\"] = month\n",
-    "            updated_row[\"Source\"] = source\n",
-    "            updated_row[\"Cols Changed\"] = \", \".join(changed_cols)\n",
+    "            updated_row[\"Source\"] = source_type\n",
+    "            updated_row[\"Cols Changed\"] = \", \".join(cols_changed)\n",
     "            changed_records.append(updated_row)\n",
     "\n",
-    "    # Convert changed records to a DataFrame\n",
-    "    if changed_records:\n",
-    "        changes_df = pd.DataFrame(changed_records)\n",
-    "        changes_df = changes_df.reindex(columns=current_df.columns.tolist() + [\"Month Changed\", \"Source\", \"Cols Changed\"], fill_value=\"\")\n",
-    "        return changes_df\n",
-    "    else:\n",
-    "        return pd.DataFrame(columns=current_df.columns.tolist() + [\"Month Changed\", \"Source\", \"Cols Changed\"])\n",
+    "    return pd.DataFrame(changed_records, columns=current_df.columns.tolist() + [\"Month Changed\", \"Source\", \"Cols Changed\"])\n",
     "\n",
     "def process_monthly_files_dict(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos):\n",
     "    \"\"\"\n",
@@ -126,7 +117,7 @@
     "\n",
     "    return new_df, changes_df\n",
     "\n",
-    "# Example usage:\n",
+    "# Example usage\n",
     "if __name__ == \"__main__\":\n",
     "    # Load master file\n",
     "    master_df = pd.read_excel(\"master_file.xlsx\")\n",
@@ -148,37 +139,13 @@
     "\n",
     "    # Save results\n",
     "    new_df.to_excel(\"new_records.xlsx\", index=False)\n",
-    "    changes_df.to_excel(\"changed_records.xlsx\", index=False)\n",
-    "\n",
-    "# Example usage:\n",
-    "if __name__ == \"__main__\":\n",
-    "    # Load master file\n",
-    "    master_df = pd.read_excel(\"master_file.xlsx\")\n",
-    "\n",
-    "    # List of monthly files with format [(month, file_path), ...]\n",
-    "    monthly_files = [\n",
-    "        (\"Jan 24\", \"jan_24_gha.xlsx\"),\n",
-    "        (\"Feb 24\", \"feb_24_gha.xlsx\"),\n",
-    "        (\"Mar 24\", \"mar_24_gha.xlsx\"),\n",
-    "        # Add more files as needed\n",
-    "    ]\n",
-    "\n",
-    "    # Columns to check for GHA and Open Position files\n",
-    "    cols_to_check_gha = [\"BF Level 3\", \"BF Level 4\", \"Cost Center\"]\n",
-    "    cols_to_check_open_pos = [\"Position Name\", \"Job Level\"]\n",
-    "\n",
-    "    # Process the files\n",
-    "    new_df, changes_df = process_monthly_files(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos)\n",
-    "\n",
-    "    # Save results\n",
-    "    new_df.to_excel(\"new_records.xlsx\", index=False)\n",
     "    changes_df.to_excel(\"changed_records.xlsx\", index=False)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55c1a78b",
+   "id": "74fca95b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5e89e34",
+   "id": "a170e490",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0aa41c0",
+   "id": "9d17f1fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3644dc8f",
+   "id": "76f95b5d",
    "metadata": {},
    "outputs": [],
    "source": [
