--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1db1261d",
+   "id": "1a11d9c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,18 +25,23 @@
     "\n",
     "    return df\n",
     "\n",
+    "def align_columns(df, reference_columns):\n",
+    "    \"\"\"\n",
+    "    Align columns in the dataframe to match the reference columns.\n",
+    "    Add missing columns with blank values and retain only relevant columns.\n",
+    "    \"\"\"\n",
+    "    for col in reference_columns:\n",
+    "        if col not in df.columns:\n",
+    "            df[col] = \"\"  # Add missing columns with blank values\n",
+    "    return df[reference_columns]  # Reorder and retain only relevant columns\n",
+    "\n",
     "def find_new_records(current_df, master_df, month, source_type):\n",
     "    \"\"\"\n",
     "    Find new records in the current month's file that are not present in the master_df.\n",
     "    \"\"\"\n",
-    "    # Standardize columns\n",
-    "    current_df = standardize_columns(current_df)\n",
+    "    # Standardize and align columns\n",
+    "    current_df = align_columns(standardize_columns(current_df), master_df.columns)\n",
     "    master_df = standardize_columns(master_df)\n",
-    "\n",
-    "    # Ensure columns match the master_df\n",
-    "    for col in master_df.columns:\n",
-    "        if col not in current_df.columns:\n",
-    "            current_df[col] = \"\"\n",
     "\n",
     "    # Identify new records\n",
     "    merged = pd.merge(current_df, master_df, on=[\"Position ID\", \"Employee ID\"], how=\"left\", indicator=True)\n",
@@ -50,9 +55,9 @@
     "    \"\"\"\n",
     "    Find records in the current month's file where specified columns have changed in the next month's file.\n",
     "    \"\"\"\n",
-    "    # Standardize columns\n",
+    "    # Standardize and align columns\n",
     "    current_df = standardize_columns(current_df)\n",
-    "    next_df = standardize_columns(next_df)\n",
+    "    next_df = align_columns(standardize_columns(next_df), current_df.columns)\n",
     "\n",
     "    # Merge current and next month's data for comparison\n",
     "    merged = pd.merge(current_df, next_df, on=[\"Position ID\", \"Employee ID\"], suffixes=(\"_current\", \"_next\"), how=\"inner\")\n",
@@ -92,8 +97,8 @@
     "        next_gha_file = next_files[0]\n",
     "\n",
     "        if current_gha_file and next_gha_file:\n",
-    "            current_gha_df = pd.read_excel(current_gha_file)\n",
-    "            next_gha_df = pd.read_excel(next_gha_file)\n",
+    "            current_gha_df = pd.read_excel(current_gha_file, sheet_name=\"Headcount - Employee Detail\")\n",
+    "            next_gha_df = pd.read_excel(next_gha_file, sheet_name=\"Headcount - Employee Detail\")\n",
     "\n",
     "            # Find new records\n",
     "            new_df = pd.concat([new_df, find_new_records(current_gha_df, master_df, current_month, \"GHA\")], ignore_index=True)\n",
@@ -145,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74fca95b",
+   "id": "60bbcff1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a170e490",
+   "id": "9c0d7bab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d17f1fb",
+   "id": "9c1bb595",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76f95b5d",
+   "id": "97c9c838",
    "metadata": {},
    "outputs": [],
    "source": [
