--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,154 +3,154 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a11d9c1",
+   "id": "5623edda",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
+    "# Function to align columns between current_df and master_df\n",
+    "def align_columns(current_df, master_df):\n",
+    "    \"\"\"\n",
+    "    Aligns the columns of current_df with master_df:\n",
+    "    - Adds missing columns in current_df with blank values.\n",
+    "    - Ensures column names match exactly, including case and order.\n",
+    "    - Drops extra columns in current_df not present in master_df.\n",
+    "\n",
+    "    Args:\n",
+    "        current_df (pd.DataFrame): The DataFrame to align.\n",
+    "        master_df (pd.DataFrame): The reference DataFrame.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: Aligned DataFrame.\n",
+    "    \"\"\"\n",
+    "    for col in master_df.columns:\n",
+    "        if col not in current_df.columns:\n",
+    "            current_df[col] = \"\"  # Add missing columns with blank values\n",
+    "\n",
+    "    return current_df.reindex(columns=master_df.columns, fill_value=\"\")\n",
+    "\n",
+    "# Function to standardize the columns of a DataFrame (renaming, cleaning data)\n",
     "def standardize_columns(df):\n",
     "    \"\"\"\n",
-    "    Standardize column names and formats in the dataframe.\n",
-    "    Rename 'Position Number' to 'Position ID' and ensure consistent formatting for IDs.\n",
-    "    \"\"\"\n",
-    "    # Rename columns for consistency\n",
-    "    df = df.rename(columns={\"Position Number\": \"Position ID\"})\n",
+    "    Standardizes column names and cleans data:\n",
+    "    - Renames 'Position Number' to 'Position ID'.\n",
+    "    - Removes decimals and leading zeros from 'Position ID' and 'Employee ID'.\n",
+    "    - Strips whitespace from column names.\n",
     "\n",
-    "    # Standardize Position ID and Employee ID formats\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): The DataFrame to standardize.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: The standardized DataFrame.\n",
+    "    \"\"\"\n",
+    "    df = df.rename(columns={\"Position Number\": \"Position ID\"})  # Rename column\n",
+    "\n",
     "    if \"Position ID\" in df.columns:\n",
-    "        df[\"Position ID\"] = df[\"Position ID\"].astype(str).str.split('.').str[0]\n",
+    "        df[\"Position ID\"] = df[\"Position ID\"].astype(str).str.split('.').str[0].str.lstrip('0')\n",
     "    if \"Employee ID\" in df.columns:\n",
-    "        df[\"Employee ID\"] = df[\"Employee ID\"].astype(str).str.split('.').str[0]\n",
+    "        df[\"Employee ID\"] = df[\"Employee ID\"].astype(str).str.split('.').str[0].str.lstrip('0')\n",
+    "\n",
+    "    # Strip whitespace from column names\n",
+    "    df.columns = df.columns.str.strip()\n",
     "\n",
     "    return df\n",
     "\n",
-    "def align_columns(df, reference_columns):\n",
-    "    \"\"\"\n",
-    "    Align columns in the dataframe to match the reference columns.\n",
-    "    Add missing columns with blank values and retain only relevant columns.\n",
-    "    \"\"\"\n",
-    "    for col in reference_columns:\n",
-    "        if col not in df.columns:\n",
-    "            df[col] = \"\"  # Add missing columns with blank values\n",
-    "    return df[reference_columns]  # Reorder and retain only relevant columns\n",
-    "\n",
+    "# Function to find new records that are not in the master DataFrame\n",
     "def find_new_records(current_df, master_df, month, source_type):\n",
     "    \"\"\"\n",
-    "    Find new records in the current month's file that are not present in the master_df.\n",
+    "    Identifies new records in the current_df that are not in the master_df.\n",
+    "    - Ensures current_df is aligned to master_df before comparison.\n",
+    "\n",
+    "    Args:\n",
+    "        current_df (pd.DataFrame): The current month's DataFrame.\n",
+    "        master_df (pd.DataFrame): The master DataFrame.\n",
+    "        month (str): The month being processed.\n",
+    "        source_type (str): The source type (e.g., \"GHA\", \"Open Positions\").\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: DataFrame of new records.\n",
     "    \"\"\"\n",
     "    # Standardize and align columns\n",
-    "    current_df = align_columns(standardize_columns(current_df), master_df.columns)\n",
+    "    current_df = standardize_columns(current_df)\n",
     "    master_df = standardize_columns(master_df)\n",
+    "    current_df = align_columns(current_df, master_df)\n",
     "\n",
     "    # Identify new records\n",
-    "    merged = pd.merge(current_df, master_df, on=[\"Position ID\", \"Employee ID\"], how=\"left\", indicator=True)\n",
+    "    merged = pd.merge(\n",
+    "        current_df, master_df, on=[\"Position ID\", \"Employee ID\"], how=\"left\", indicator=True\n",
+    "    )\n",
     "    new_records = merged[merged[\"_merge\"] == \"left_only\"].drop(columns=[\"_merge\"])\n",
     "    new_records[\"Month Added\"] = month\n",
     "    new_records[\"Source\"] = source_type\n",
     "\n",
-    "    return new_records[master_df.columns.tolist() + [\"Month Added\", \"Source\"]]\n",
+    "    # Ensure the output columns match master_df with additional fields\n",
+    "    output_columns = master_df.columns.tolist() + [\"Month Added\", \"Source\"]\n",
+    "    return new_records.reindex(columns=output_columns, fill_value=\"\")\n",
     "\n",
-    "def find_changed_records(current_df, next_df, cols_to_check, month, source_type):\n",
+    "# Function to process monthly files and find new records for each month\n",
+    "def process_monthly_files(monthly_files, master_df):\n",
     "    \"\"\"\n",
-    "    Find records in the current month's file where specified columns have changed in the next month's file.\n",
+    "    Processes all monthly files to find new records and changes.\n",
+    "    - Iterates through the monthly files dictionary.\n",
+    "    - Identifies new records for each month and source type.\n",
+    "\n",
+    "    Args:\n",
+    "        monthly_files (dict): Dictionary with months as keys and file tuples as values.\n",
+    "        master_df (pd.DataFrame): The master DataFrame.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: DataFrame of all new records.\n",
     "    \"\"\"\n",
-    "    # Standardize and align columns\n",
-    "    current_df = standardize_columns(current_df)\n",
-    "    next_df = align_columns(standardize_columns(next_df), current_df.columns)\n",
+    "    new_df = pd.DataFrame()\n",
     "\n",
-    "    # Merge current and next month's data for comparison\n",
-    "    merged = pd.merge(current_df, next_df, on=[\"Position ID\", \"Employee ID\"], suffixes=(\"_current\", \"_next\"), how=\"inner\")\n",
+    "    for month, files in monthly_files.items():\n",
+    "        # Load GHA and Open Position files\n",
+    "        gha_file, open_pos_file = files\n",
     "\n",
-    "    # Identify changes in the specified columns\n",
-    "    changed_records = []\n",
-    "    for _, row in merged.iterrows():\n",
-    "        cols_changed = [col for col in cols_to_check if row[f\"{col}_current\"] != row[f\"{col}_next\"]]\n",
-    "        if cols_changed:\n",
-    "            updated_row = row[[col for col in current_df.columns if col.endswith(\"_next\")]].rename(lambda x: x.replace(\"_next\", \"\"))\n",
-    "            updated_row[\"Month Changed\"] = month\n",
-    "            updated_row[\"Source\"] = source_type\n",
-    "            updated_row[\"Cols Changed\"] = \", \".join(cols_changed)\n",
-    "            changed_records.append(updated_row)\n",
+    "        # Load GHA data\n",
+    "        gha_df = pd.read_excel(gha_file, sheet_name=\"Headcount - Employee Detail\")\n",
+    "        gha_df = standardize_columns(gha_df)\n",
+    "        gha_df = align_columns(gha_df, master_df)\n",
     "\n",
-    "    return pd.DataFrame(changed_records, columns=current_df.columns.tolist() + [\"Month Changed\", \"Source\", \"Cols Changed\"])\n",
+    "        # Identify new GHA records\n",
+    "        new_gha_records = find_new_records(gha_df, master_df, month, \"GHA\")\n",
+    "        new_df = pd.concat([new_df, new_gha_records], ignore_index=True)\n",
     "\n",
-    "def process_monthly_files_dict(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos):\n",
-    "    \"\"\"\n",
-    "    Process monthly files to find new and changed records.\n",
-    "    Handles 'monthly_files' as a dictionary.\n",
-    "    \"\"\"\n",
-    "    new_df = pd.DataFrame(columns=master_df.columns.tolist() + [\"Month Added\", \"Source\"])\n",
-    "    changes_df = pd.DataFrame(columns=master_df.columns.tolist() + [\"Month Changed\", \"Source\", \"Cols Changed\"])\n",
+    "        # Load Open Position data\n",
+    "        open_pos_df = pd.read_excel(open_pos_file)\n",
+    "        open_pos_df = standardize_columns(open_pos_df)\n",
+    "        open_pos_df = align_columns(open_pos_df, master_df)\n",
     "\n",
-    "    months = list(monthly_files.keys())\n",
+    "        # Identify new Open Position records\n",
+    "        new_open_records = find_new_records(open_pos_df, master_df, month, \"Open Positions\")\n",
+    "        new_df = pd.concat([new_df, new_open_records], ignore_index=True)\n",
     "\n",
-    "    for i in range(len(months) - 1):\n",
-    "        current_month = months[i]\n",
-    "        next_month = months[i + 1]\n",
-    "\n",
-    "        current_files = monthly_files[current_month]\n",
-    "        next_files = monthly_files[next_month]\n",
-    "\n",
-    "        # Process GHA files\n",
-    "        current_gha_file = current_files[0]\n",
-    "        next_gha_file = next_files[0]\n",
-    "\n",
-    "        if current_gha_file and next_gha_file:\n",
-    "            current_gha_df = pd.read_excel(current_gha_file, sheet_name=\"Headcount - Employee Detail\")\n",
-    "            next_gha_df = pd.read_excel(next_gha_file, sheet_name=\"Headcount - Employee Detail\")\n",
-    "\n",
-    "            # Find new records\n",
-    "            new_df = pd.concat([new_df, find_new_records(current_gha_df, master_df, current_month, \"GHA\")], ignore_index=True)\n",
-    "\n",
-    "            # Find changed records\n",
-    "            changes_df = pd.concat([changes_df, find_changed_records(current_gha_df, next_gha_df, cols_to_check_gha, next_month, \"GHA\")], ignore_index=True)\n",
-    "\n",
-    "        # Process Open Position files\n",
-    "        current_open_pos_file = current_files[1]\n",
-    "        next_open_pos_file = next_files[1]\n",
-    "\n",
-    "        if current_open_pos_file and next_open_pos_file:\n",
-    "            current_open_pos_df = pd.read_excel(current_open_pos_file)\n",
-    "            next_open_pos_df = pd.read_excel(next_open_pos_file)\n",
-    "\n",
-    "            # Find new records\n",
-    "            new_df = pd.concat([new_df, find_new_records(current_open_pos_df, master_df, current_month, \"Open Position\")], ignore_index=True)\n",
-    "\n",
-    "            # Find changed records\n",
-    "            changes_df = pd.concat([changes_df, find_changed_records(current_open_pos_df, next_open_pos_df, cols_to_check_open_pos, next_month, \"Open Position\")], ignore_index=True)\n",
-    "\n",
-    "    return new_df, changes_df\n",
+    "    return new_df\n",
     "\n",
     "# Example usage\n",
     "if __name__ == \"__main__\":\n",
-    "    # Load master file\n",
-    "    master_df = pd.read_excel(\"master_file.xlsx\")\n",
-    "\n",
-    "    # Dictionary of monthly files with format: {month: (gha_file, open_pos_file)}\n",
+    "    # Define monthly files\n",
     "    monthly_files = {\n",
     "        \"Jan 24\": (\"gha_jan.xlsx\", \"open_pos_jan.xlsx\"),\n",
     "        \"Feb 24\": (\"gha_feb.xlsx\", \"open_pos_feb.xlsx\"),\n",
-    "        \"Mar 24\": (\"gha_mar.xlsx\", \"open_pos_mar.xlsx\"),\n",
-    "        # Add more entries as needed\n",
+    "        # Add more months here\n",
     "    }\n",
     "\n",
-    "    # Columns to check for GHA and Open Position files\n",
-    "    cols_to_check_gha = [\"BF Level 3\", \"BF Level 4\", \"Cost Center\"]\n",
-    "    cols_to_check_open_pos = [\"Position Name\", \"Job Level\"]\n",
+    "    # Load the master DataFrame\n",
+    "    master_df = pd.read_excel(\"master_file.xlsx\")\n",
     "\n",
-    "    # Process the files\n",
-    "    new_df, changes_df = process_monthly_files_dict(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos)\n",
+    "    # Process the monthly files to find new records\n",
+    "    new_records = process_monthly_files(monthly_files, master_df)\n",
     "\n",
-    "    # Save results\n",
-    "    new_df.to_excel(\"new_records.xlsx\", index=False)\n",
-    "    changes_df.to_excel(\"changed_records.xlsx\", index=False)\n"
+    "    # Save the new records to a file\n",
+    "    new_records.to_excel(\"new_records.xlsx\", index=False)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60bbcff1",
+   "id": "9b8086c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c0d7bab",
+   "id": "22013ea2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c1bb595",
+   "id": "5f099962",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97c9c838",
+   "id": "53425123",
    "metadata": {},
    "outputs": [],
    "source": [
