--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -9,142 +9,108 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Function to align columns between current_df and master_df\n",
-    "def align_columns(current_df, master_df):\n",
-    "    \"\"\"\n",
-    "    Aligns the columns of current_df with master_df:\n",
-    "    - Adds missing columns in current_df with blank values.\n",
-    "    - Ensures column names match exactly, including case and order.\n",
-    "    - Drops extra columns in current_df not present in master_df.\n",
-    "\n",
-    "    Args:\n",
-    "        current_df (pd.DataFrame): The DataFrame to align.\n",
-    "        master_df (pd.DataFrame): The reference DataFrame.\n",
-    "\n",
-    "    Returns:\n",
-    "        pd.DataFrame: Aligned DataFrame.\n",
-    "    \"\"\"\n",
-    "    for col in master_df.columns:\n",
-    "        if col not in current_df.columns:\n",
-    "            current_df[col] = \"\"  # Add missing columns with blank values\n",
-    "\n",
-    "    return current_df.reindex(columns=master_df.columns, fill_value=\"\")\n",
-    "\n",
-    "# Function to standardize the columns of a DataFrame (renaming, cleaning data)\n",
-    "def standardize_columns(df):\n",
-    "    \"\"\"\n",
-    "    Standardizes column names and cleans data:\n",
-    "    - Renames 'Position Number' to 'Position ID'.\n",
-    "    - Removes decimals and leading zeros from 'Position ID' and 'Employee ID'.\n",
-    "    - Strips whitespace from column names.\n",
-    "\n",
-    "    Args:\n",
-    "        df (pd.DataFrame): The DataFrame to standardize.\n",
-    "\n",
-    "    Returns:\n",
-    "        pd.DataFrame: The standardized DataFrame.\n",
-    "    \"\"\"\n",
-    "    df = df.rename(columns={\"Position Number\": \"Position ID\"})  # Rename column\n",
-    "\n",
+    "def standardize_columns(df, source_type):\n",
+    "    # Standardize column names\n",
+    "    df = df.rename(columns={\n",
+    "        \"Position Number\": \"Position ID\",\n",
+    "        \"Employee Global Career Band\": \"Global Career Band\"  # For open positions\n",
+    "    })\n",
+    "    \n",
+    "    # Clean Position ID and Employee ID\n",
     "    if \"Position ID\" in df.columns:\n",
-    "        df[\"Position ID\"] = df[\"Position ID\"].astype(str).str.split('.').str[0].str.lstrip('0')\n",
+    "        df[\"Position ID\"] = df[\"Position ID\"].astype(str).str.replace(r\"\\.0$\", \"\", regex=True).str.strip()\n",
     "    if \"Employee ID\" in df.columns:\n",
-    "        df[\"Employee ID\"] = df[\"Employee ID\"].astype(str).str.split('.').str[0].str.lstrip('0')\n",
-    "\n",
-    "    # Strip whitespace from column names\n",
-    "    df.columns = df.columns.str.strip()\n",
-    "\n",
+    "        df[\"Employee ID\"] = df[\"Employee ID\"].astype(str).str.replace(r\"\\.0$\", \"\", regex=True).str.strip()\n",
+    "    \n",
+    "    # Add missing columns if not present\n",
+    "    required_cols = [\"Position ID\", \"Employee ID\"]  # Add more as needed\n",
+    "    for col in required_cols:\n",
+    "        if col not in df.columns:\n",
+    "            df[col] = \"\"\n",
+    "    \n",
     "    return df\n",
     "\n",
-    "# Function to find new records that are not in the master DataFrame\n",
-    "def find_new_records(current_df, master_df, month, source_type):\n",
-    "    \"\"\"\n",
-    "    Identifies new records in the current_df that are not in the master_df.\n",
-    "    - Ensures current_df is aligned to master_df before comparison.\n",
+    "def find_changes(current_df, next_df, cols_to_check, month, source_type):\n",
+    "    changes = []\n",
+    "    \n",
+    "    # Standardize column names\n",
+    "    current_df = standardize_columns(current_df, source_type)\n",
+    "    next_df = standardize_columns(next_df, source_type)\n",
     "\n",
-    "    Args:\n",
-    "        current_df (pd.DataFrame): The current month's DataFrame.\n",
-    "        master_df (pd.DataFrame): The master DataFrame.\n",
-    "        month (str): The month being processed.\n",
-    "        source_type (str): The source type (e.g., \"GHA\", \"Open Positions\").\n",
+    "    # Merge on Position ID (and Employee ID if GHA)\n",
+    "    merge_cols = [\"Position ID\"]\n",
+    "    if source_type == \"GHA\":\n",
+    "        merge_cols.append(\"Employee ID\")\n",
+    "    \n",
+    "    merged = pd.merge(current_df, next_df, on=merge_cols, how=\"outer\", suffixes=(\"_current\", \"_next\"), indicator=True)\n",
+    "    \n",
+    "    for _, row in merged.iterrows():\n",
+    "        if row[\"_merge\"] == \"right_only\":\n",
+    "            # New record in the next month, skip it\n",
+    "            continue\n",
+    "        \n",
+    "        if row[\"_merge\"] == \"left_only\":\n",
+    "            # Position/Employee no longer present\n",
+    "            continue\n",
+    "        \n",
+    "        # Check for changes in important columns\n",
+    "        change_desc = []\n",
+    "        for col in cols_to_check:\n",
+    "            col_current = f\"{col}_current\"\n",
+    "            col_next = f\"{col}_next\"\n",
+    "            if col_current in row and col_next in row and row[col_current] != row[col_next]:\n",
+    "                change_desc.append(f\"{col} changed\")\n",
+    "        \n",
+    "        if change_desc:\n",
+    "            changes.append({\n",
+    "                \"Position ID\": row[\"Position ID\"],\n",
+    "                \"Employee ID\": row.get(\"Employee ID\", \"\"),\n",
+    "                \"Month Changed\": month,\n",
+    "                \"Change Description\": \"; \".join(change_desc),\n",
+    "                \"Source\": source_type\n",
+    "            })\n",
+    "    \n",
+    "    return pd.DataFrame(changes)\n",
     "\n",
-    "    Returns:\n",
-    "        pd.DataFrame: DataFrame of new records.\n",
-    "    \"\"\"\n",
-    "    # Standardize and align columns\n",
-    "    current_df = standardize_columns(current_df)\n",
-    "    master_df = standardize_columns(master_df)\n",
-    "    current_df = align_columns(current_df, master_df)\n",
-    "\n",
-    "    # Identify new records\n",
-    "    merged = pd.merge(\n",
-    "        current_df, master_df, on=[\"Position ID\", \"Employee ID\"], how=\"left\", indicator=True\n",
-    "    )\n",
-    "    new_records = merged[merged[\"_merge\"] == \"left_only\"].drop(columns=[\"_merge\"])\n",
-    "    new_records[\"Month Added\"] = month\n",
-    "    new_records[\"Source\"] = source_type\n",
-    "\n",
-    "    # Ensure the output columns match master_df with additional fields\n",
-    "    output_columns = master_df.columns.tolist() + [\"Month Added\", \"Source\"]\n",
-    "    return new_records.reindex(columns=output_columns, fill_value=\"\")\n",
-    "\n",
-    "# Function to process monthly files and find new records for each month\n",
-    "def process_monthly_files(monthly_files, master_df):\n",
-    "    \"\"\"\n",
-    "    Processes all monthly files to find new records and changes.\n",
-    "    - Iterates through the monthly files dictionary.\n",
-    "    - Identifies new records for each month and source type.\n",
-    "\n",
-    "    Args:\n",
-    "        monthly_files (dict): Dictionary with months as keys and file tuples as values.\n",
-    "        master_df (pd.DataFrame): The master DataFrame.\n",
-    "\n",
-    "    Returns:\n",
-    "        pd.DataFrame: DataFrame of all new records.\n",
-    "    \"\"\"\n",
-    "    new_df = pd.DataFrame()\n",
-    "\n",
-    "    for month, files in monthly_files.items():\n",
-    "        # Load GHA and Open Position files\n",
-    "        gha_file, open_pos_file = files\n",
-    "\n",
-    "        # Load GHA data\n",
-    "        gha_df = pd.read_excel(gha_file, sheet_name=\"Headcount - Employee Detail\")\n",
-    "        gha_df = standardize_columns(gha_df)\n",
-    "        gha_df = align_columns(gha_df, master_df)\n",
-    "\n",
-    "        # Identify new GHA records\n",
-    "        new_gha_records = find_new_records(gha_df, master_df, month, \"GHA\")\n",
-    "        new_df = pd.concat([new_df, new_gha_records], ignore_index=True)\n",
-    "\n",
-    "        # Load Open Position data\n",
-    "        open_pos_df = pd.read_excel(open_pos_file)\n",
-    "        open_pos_df = standardize_columns(open_pos_df)\n",
-    "        open_pos_df = align_columns(open_pos_df, master_df)\n",
-    "\n",
-    "        # Identify new Open Position records\n",
-    "        new_open_records = find_new_records(open_pos_df, master_df, month, \"Open Positions\")\n",
-    "        new_df = pd.concat([new_df, new_open_records], ignore_index=True)\n",
-    "\n",
-    "    return new_df\n",
+    "def process_monthly_files(monthly_files, cols_to_check_gha, cols_to_check_open_pos):\n",
+    "    changes_df = pd.DataFrame()\n",
+    "    \n",
+    "    months = list(monthly_files.keys())\n",
+    "    for i in range(len(months) - 1):\n",
+    "        current_month = months[i]\n",
+    "        next_month = months[i + 1]\n",
+    "        \n",
+    "        gha_current_file, open_pos_current_file = monthly_files[current_month]\n",
+    "        gha_next_file, open_pos_next_file = monthly_files[next_month]\n",
+    "        \n",
+    "        # Read files (assuming single sheet for simplicity)\n",
+    "        gha_current_df = pd.read_excel(gha_current_file, sheet_name=\"Headcount - Employee Detail\")\n",
+    "        gha_next_df = pd.read_excel(gha_next_file, sheet_name=\"Headcount - Employee Detail\")\n",
+    "        open_pos_current_df = pd.read_excel(open_pos_current_file)\n",
+    "        open_pos_next_df = pd.read_excel(open_pos_next_file)\n",
+    "        \n",
+    "        # Process GHA\n",
+    "        gha_changes = find_changes(gha_current_df, gha_next_df, cols_to_check_gha, next_month, \"GHA\")\n",
+    "        changes_df = pd.concat([changes_df, gha_changes], ignore_index=True)\n",
+    "        \n",
+    "        # Process Open Positions\n",
+    "        open_pos_changes = find_changes(open_pos_current_df, open_pos_next_df, cols_to_check_open_pos, next_month, \"Open Positions\")\n",
+    "        changes_df = pd.concat([changes_df, open_pos_changes], ignore_index=True)\n",
+    "    \n",
+    "    return changes_df\n",
     "\n",
     "# Example usage\n",
-    "if __name__ == \"__main__\":\n",
-    "    # Define monthly files\n",
-    "    monthly_files = {\n",
-    "        \"Jan 24\": (\"gha_jan.xlsx\", \"open_pos_jan.xlsx\"),\n",
-    "        \"Feb 24\": (\"gha_feb.xlsx\", \"open_pos_feb.xlsx\"),\n",
-    "        # Add more months here\n",
-    "    }\n",
+    "monthly_files = {\n",
+    "    \"Jan 24\": (\"gha_jan.xlsx\", \"open_pos_jan.xlsx\"),\n",
+    "    \"Feb 24\": (\"gha_feb.xlsx\", \"open_pos_feb.xlsx\"),\n",
+    "    # Add other months...\n",
+    "}\n",
     "\n",
-    "    # Load the master DataFrame\n",
-    "    master_df = pd.read_excel(\"master_file.xlsx\")\n",
+    "cols_to_check_gha = [\"Global Career Band\", \"Employee FTE\", \"Employee Type\", \"Work Location City\"]\n",
+    "cols_to_check_open_pos = [\"Global Career Band\", \"Work Location City\"]\n",
     "\n",
-    "    # Process the monthly files to find new records\n",
-    "    new_records = process_monthly_files(monthly_files, master_df)\n",
-    "\n",
-    "    # Save the new records to a file\n",
-    "    new_records.to_excel(\"new_records.xlsx\", index=False)\n"
+    "changes_df = process_monthly_files(monthly_files, cols_to_check_gha, cols_to_check_open_pos)\n",
+    "changes_df.to_excel(\"changes_output.xlsx\", index=False)\n"
    ]
   },
   {
