--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,6 +3,129 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "19063769",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def standardize_columns(df, source_type):\n",
+    "    # Standardize column names\n",
+    "    df = df.rename(columns={\n",
+    "        \"Position Number\": \"Position ID\",\n",
+    "        \"Employee Global Career Band\": \"Global Career Band\"  # For open positions\n",
+    "    })\n",
+    "    \n",
+    "    # Clean Position ID and Employee ID\n",
+    "    if \"Position ID\" in df.columns:\n",
+    "        df[\"Position ID\"] = df[\"Position ID\"].astype(str).str.replace(r\"\\.0$\", \"\", regex=True).str.strip()\n",
+    "    if \"Employee ID\" in df.columns:\n",
+    "        df[\"Employee ID\"] = df[\"Employee ID\"].astype(str).str.replace(r\"\\.0$\", \"\", regex=True).str.strip()\n",
+    "    \n",
+    "    # Add missing columns if not present\n",
+    "    required_cols = [\"Position ID\", \"Employee ID\"]  # Add more as needed\n",
+    "    for col in required_cols:\n",
+    "        if col not in df.columns:\n",
+    "            df[col] = \"\"\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "def find_changes_gha(current_df, next_df, cols_to_check, month):\n",
+    "    changes = []\n",
+    "    \n",
+    "    # Standardize column names\n",
+    "    current_df = standardize_columns(current_df, \"GHA\")\n",
+    "    next_df = standardize_columns(next_df, \"GHA\")\n",
+    "    \n",
+    "    # Concatenate Employee ID and Position ID to create unique identifiers\n",
+    "    current_df[\"Emp_Pos_ID\"] = current_df[\"Employee ID\"] + \"_\" + current_df[\"Position ID\"]\n",
+    "    next_df[\"Emp_Pos_ID\"] = next_df[\"Employee ID\"] + \"_\" + next_df[\"Position ID\"]\n",
+    "\n",
+    "    # Compare based on Emp_Pos_ID\n",
+    "    current_set = set(current_df[\"Emp_Pos_ID\"])\n",
+    "    next_set = set(next_df[\"Emp_Pos_ID\"])\n",
+    "    \n",
+    "    # Identify records in current_df but not in next_df\n",
+    "    for emp_pos_id in current_set - next_set:\n",
+    "        record = current_df[current_df[\"Emp_Pos_ID\"] == emp_pos_id].iloc[0]\n",
+    "        employee_id = record[\"Employee ID\"]\n",
+    "        \n",
+    "        # Check if the Employee ID exists in next_df\n",
+    "        if employee_id not in next_df[\"Employee ID\"].values:\n",
+    "            changes.append({\n",
+    "                \"Position ID\": record[\"Position ID\"],\n",
+    "                \"Employee ID\": employee_id,\n",
+    "                \"Month Changed\": month,\n",
+    "                \"Change Description\": \"Employee ID does not exist, movement out\",\n",
+    "                \"Source\": \"GHA\"\n",
+    "            })\n",
+    "    \n",
+    "    # Identify records in both but with changes in other columns\n",
+    "    common_ids = current_set & next_set\n",
+    "    for emp_pos_id in common_ids:\n",
+    "        current_record = current_df[current_df[\"Emp_Pos_ID\"] == emp_pos_id].iloc[0]\n",
+    "        next_record = next_df[next_df[\"Emp_Pos_ID\"] == emp_pos_id].iloc[0]\n",
+    "        \n",
+    "        # Check for changes in important columns\n",
+    "        change_desc = []\n",
+    "        for col in cols_to_check:\n",
+    "            if col in current_record and col in next_record:\n",
+    "                if current_record[col] != next_record[col]:\n",
+    "                    change_desc.append(f\"{col} changed\")\n",
+    "        \n",
+    "        if change_desc:\n",
+    "            changes.append({\n",
+    "                \"Position ID\": current_record[\"Position ID\"],\n",
+    "                \"Employee ID\": current_record[\"Employee ID\"],\n",
+    "                \"Month Changed\": month,\n",
+    "                \"Change Description\": \"; \".join(change_desc),\n",
+    "                \"Source\": \"GHA\"\n",
+    "            })\n",
+    "    \n",
+    "    return pd.DataFrame(changes)\n",
+    "\n",
+    "def process_monthly_files(monthly_files, cols_to_check_gha, cols_to_check_open_pos):\n",
+    "    changes_df = pd.DataFrame()\n",
+    "    \n",
+    "    months = list(monthly_files.keys())\n",
+    "    for i in range(len(months) - 1):\n",
+    "        current_month = months[i]\n",
+    "        next_month = months[i + 1]\n",
+    "        \n",
+    "        gha_current_file, open_pos_current_file = monthly_files[current_month]\n",
+    "        gha_next_file, open_pos_next_file = monthly_files[next_month]\n",
+    "        \n",
+    "        # Read files (assuming single sheet for simplicity)\n",
+    "        gha_current_df = pd.read_excel(gha_current_file, sheet_name=\"Headcount - Employee Detail\")\n",
+    "        gha_next_df = pd.read_excel(gha_next_file, sheet_name=\"Headcount - Employee Detail\")\n",
+    "        open_pos_current_df = pd.read_excel(open_pos_current_file)\n",
+    "        open_pos_next_df = pd.read_excel(open_pos_next_file)\n",
+    "        \n",
+    "        # Process GHA\n",
+    "        gha_changes = find_changes_gha(gha_current_df, gha_next_df, cols_to_check_gha, next_month)\n",
+    "        changes_df = pd.concat([changes_df, gha_changes], ignore_index=True)\n",
+    "        \n",
+    "        # Process Open Positions (unchanged)\n",
+    "        open_pos_changes = find_changes(open_pos_current_df, open_pos_next_df, cols_to_check_open_pos, next_month, \"Open Positions\")\n",
+    "        changes_df = pd.concat([changes_df, open_pos_changes], ignore_index=True)\n",
+    "    \n",
+    "    return changes_df\n",
+    "\n",
+    "# Example usage\n",
+    "monthly_files = {\n",
+    "    \"Jan 24\": (\"gha_jan.xlsx\", \"open_pos_jan.xlsx\"),\n",
+    "    \"Feb 24\": (\"gha_feb.xlsx\", \"open_pos_feb.xlsx\"),\n",
+    "    # Add other months...\n",
+    "}\n",
+    "\n",
+    "cols_to_check_gha = [\"Global Career Band\", \"Employee FTE\", \"Employee Type\", \"Work Location City\"]\n",
+    "cols_to_check_open_pos = [\"Global Career Band\", \"Work Location City\"]\n",
+    "\n",
+    "changes_df = process_monthly_files(monthly_files, cols_to_check_gha, cols_to_check_open_pos)\n",
+    "changes_df.to_excel(\"changes_output.xlsx\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5623edda",
    "metadata": {},
    "outputs": [],
