--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50bb6843",
+   "id": "fec2a686",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iterate through the current month's data\n",
+    "for index, current_record in current_df.iterrows():\n",
+    "    # Generate the combined emp_pos_ID for current and next data\n",
+    "    current_emp_pos = current_record[\"emp_pos_ID\"]\n",
+    "    next_record = next_df[next_df[\"emp_pos_ID\"] == current_emp_pos]\n",
+    "\n",
+    "    # If exact emp_pos_ID doesn't exist in the next month\n",
+    "    if next_record.empty:\n",
+    "        # Check if the Employee ID exists but with a different Position ID\n",
+    "        employee_matches = next_df[next_df[\"Employee ID\"] == current_record[\"Employee ID\"]]\n",
+    "        if not employee_matches.empty:\n",
+    "            # Mobility case: Employee has changed Position ID\n",
+    "            new_pos_id = employee_matches.iloc[0][\"Position ID\"]\n",
+    "            changes.append({\n",
+    "                \"Position ID\": current_record[\"Position ID\"],\n",
+    "                \"Employee ID\": current_record[\"Employee ID\"],\n",
+    "                \"Month Changed\": month,\n",
+    "                \"Change Description\": f\"Mobility: Position ID changed to {new_pos_id}\",\n",
+    "                \"Source\": \"GHA\",\n",
+    "            })\n",
+    "            continue\n",
+    "\n",
+    "        # Employee ID does not exist in the next month\n",
+    "        changes.append({\n",
+    "            \"Position ID\": current_record[\"Position ID\"],\n",
+    "            \"Employee ID\": current_record[\"Employee ID\"],\n",
+    "            \"Month Changed\": month,\n",
+    "            \"Change Description\": \"Employee ID does not exist, movement out\",\n",
+    "            \"Source\": \"GHA\",\n",
+    "        })\n",
+    "        continue\n",
+    "\n",
+    "    # Convert to a single next record for further comparison\n",
+    "    next_record = next_record.iloc[0]\n",
+    "\n",
+    "    # Initialize the change description list\n",
+    "    change_desc = []\n",
+    "\n",
+    "    # Compare other important columns for changes\n",
+    "    for col in comparison_columns:\n",
+    "        if pd.notna(current_record[col]) and pd.notna(next_record[col]) and current_record[col] != next_record[col]:\n",
+    "            if col in column_change_descriptions:\n",
+    "                change_desc.append(column_change_descriptions[col])\n",
+    "            else:\n",
+    "                change_desc.append(f\"{col} changed\")\n",
+    "\n",
+    "    # Append to changes list if any differences are found\n",
+    "    if change_desc:\n",
+    "        changes.append({\n",
+    "            \"Position ID\": current_record[\"Position ID\"],\n",
+    "            \"Employee ID\": current_record[\"Employee ID\"],\n",
+    "            \"Month Changed\": month,\n",
+    "            \"Change Description\": \"; \".join(change_desc),\n",
+    "            \"Source\": \"GHA\",\n",
+    "        })\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6c72da9",
    "metadata": {},
    "outputs": [],
    "source": [
