--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,6 +3,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "93be4298",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add the entire row to changes_df when changes are detected\n",
+    "if current_record[\"Employee ID\"] == next_record[\"Employee ID\"] and current_record[\"Position ID\"] != next_record[\"Position ID\"]:\n",
+    "    # Add the entire row from current_df with change-specific details\n",
+    "    change_row = current_record.copy()  # Copy the entire current record row\n",
+    "    change_row[\"Position ID (New)\"] = next_record[\"Position ID\"]  # Add specific info for the change\n",
+    "    change_row[\"Change Description\"] = \"Mobility: Position ID changed\"  # Description for the change\n",
+    "    change_row[\"Month Changed\"] = month  # Add month of the change\n",
+    "    change_row[\"Change Type\"] = \"Mobility\"  # Specify change type\n",
+    "    change_row[\"Source\"] = \"GHA\"  # Specify source of the change\n",
+    "    changes_df = changes_df.append(change_row, ignore_index=True)  # Append to changes_df\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    # Standardize columns in changes_df before concatenating with master_df\n",
+    "for col in master_df.columns:\n",
+    "    if col not in changes_df.columns:\n",
+    "        changes_df[col] = None  # Add missing columns with default value None\n",
+    "\n",
+    "# Drop extra columns that are not in master_df\n",
+    "extra_cols = [col for col in changes_df.columns if col not in master_df.columns]\n",
+    "changes_df.drop(columns=extra_cols, inplace=True)\n",
+    "\n",
+    "# Concatenate GHA and Open Position changes\n",
+    "final_changes_df = pd.concat([gha_changes_df, open_pos_changes_df], ignore_index=True)\n",
+    "\n",
+    "\n",
+    "for col in master_df.columns:\n",
+    "    if col not in gha_changes_df.columns:\n",
+    "        gha_changes_df[col] = None\n",
+    "extra_cols = [col for col in gha_changes_df.columns if col not in master_df.columns]\n",
+    "gha_changes_df.drop(columns=extra_cols, inplace=True)\n",
+    "\n",
+    "\n",
+    "for col in master_df.columns:\n",
+    "    if col not in open_pos_changes_df.columns:\n",
+    "        open_pos_changes_df[col] = None\n",
+    "extra_cols = [col for col in open_pos_changes_df.columns if col not in master_df.columns]\n",
+    "open_pos_changes_df.drop(columns=extra_cols, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8ad00a77",
    "metadata": {},
    "outputs": [],
